--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                         <h2 class="md-heading">Call</h2>
                         <p>+91 9876789876</p>
                     </div>
-                    <img src="./iimg/company-img.jpg" alt="Company Image">
+                    <img src="company-img.jpg" alt="Company Image">
                 </div>
                 <form action="" class="form">
                     <h1 class="form-head ut-class text-black">CONTACT US</h1>
