--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="showcase" id="explore-places">
         <div class="container">
             <div class="row row1">
-                <div class="image-box"><img src="./iimg/showcase-photo3.jpg" alt=""></div>
+                <div class="image-box"><img src="showcase-photo3.jpg" alt=""></div>
                 <div class="text-box"><h2 class="ut-class">DEGANVY, U.K</h2>
                 <p class="text-gray">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis labore ipsam, voluptatibus doloremque possimus aliquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt unde ea alias iste est natus!
@@ -38,7 +38,7 @@
         </div>
             </div>
             <div class="row row2">
-                <div class="image-box"><img src="./iimg/showcase-photo1.jpg" alt=""></div>
+                <div class="image-box"><img src="showcase-photo1.jpg" alt=""></div>
                 <div class="text-box"><h2 class="ut-class">DESERT, EGYPT</h2>
                 <p class="text-gray">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem optio, necessitatibus minus voluptatibus sit Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque consequatur possimus numquam blanditiis. Incidunt, ullam!
